ai agent for email verification